--- a/app-web/templates/reservas.html
+++ b/app-web/templates/reservas.html
@@ -22,7 +22,9 @@
         <div class="contact-box">
           <h3>Consultá o modificá<br />tu reserva</h3>
           <p>En Flask Seasons estamos disponible todos los días para vos. <br />Visualizá tus reservas por nuestra página web o por nuestra aplicación completando los siguientes datos.</p>
-          {%if reserva %} {% include 'components/info_reserva.html' %} {% else %}
+          {%if reserva %} 
+            {% include 'components/info_reserva.html' %} 
+          {% else %}
           <form class="rd-mailform" method="post" action="{{url_for('reservas')}}">
             <div class="range range-sm-bottom spacing-20 form-reserva">
               <div class="cell-xl-12 cell-md-12 cell-sm-12 cell-form">
@@ -40,7 +42,9 @@
                 </div>
               </div>
               <div class="cell-xl-12 cell-md-12 cell-sm-12 boton-container-reserva {{'justify-content-between' if error else 'justify-content-end'}}">
-                {% if error %} {% include 'components/mensaje_de_estado.html' %} {% endif %}
+                {% if error %} 
+                  {% include 'components/mensaje_de_estado.html' %} 
+                {% endif %}
                 <button class="button button-primary button-square button-block button-effect-ujarak" type="submit"><span>Consultar</span></button>
               </div>
             </div>
@@ -99,8 +103,15 @@
   document.querySelector('.container-status-message').scrollIntoView();
 </script>
 {% endif %} 
+
 {% if reserva %}
 <script>
   document.querySelector('.form-info-reserva').scrollIntoView();
 </script>
-{% endif %} {%endblock content%}
+{% endif %} 
+
+{%endblock content%} 
+
+{%block scripts%}
+<script src="{{url_for('static', filename='js/reservas.js')}}"></script>
+{%endblock scripts%}
