--- a/app-web/templates/base.html
+++ b/app-web/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
-    <link rel="icon" href="{{url_for('static', filename='images/flasklogo.ico')}}" type="image/x-icon" />
+    <link rel="icon" href="{{url_for('static', filename='images/favicon.ico')}}" type="image/x-icon" />
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,700,400italic%7CPoppins:300,400,500,700" />
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.css')}}" />
