--- a/app-web/templates/components/info_reserva.html
+++ b/app-web/templates/components/info_reserva.html
@@ -1,5 +1,5 @@
 <form class="rd-mailform form-info-reserva" method="post">
-  <input type="hidden" name="reserva" value="{{reserva}}" />
+  <input type="hidden" name="numero_reserva" value="{{reserva.numero_reserva}}" />
   <div class="range range-sm-bottom spacing-20">
     <div class="cell-sm-6 cell-form">
       <p class="label-form-reserva">Nombre</p>
