--- a/app-web/templates/base.html
+++ b/app-web/templates/base.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- Modal -->
-    {%include 'components/modal.html '%}
+    {%include 'modal.html '%}
     <!-- Page-->
     <div class="text-center page">
       <!-- Page preloader-->
