--- a/app-web/templates/info_reserva.html
+++ b/app-web/templates/info_reserva.html
@@ -73,8 +73,8 @@
 
     <div class="cell-xl-12 cell-md-12 cell-sm-12 boton-container-reserva">
       {% if error %} {% include 'mensaje_de_estado.html' %} {% endif %}
-      <button class="button button-primary button-square button-block" id="cancelarReserva" type="button" data-toggle="modal" data-target="#myModal"><span>Cancelar</span></button>
-      <button class="button button-primary button-square button-block" id="modificarReserva" type="button" data-toggle="modal" data-target="#myModal"><span>Modificar</span></button>
+      <button class="button button-primary button-square button-block" id="cancelarReserva" type="button" data-toggle="modal" data-target="#myModal"><span>Cancelar reserva</span></button>
+      <button class="button button-primary button-square button-block" id="modificarReserva" type="button" data-toggle="modal" data-target="#myModal" title="Cambie la fecha para habilitar el botón"><span>Modificar reserva</span></button>
     </div>
   </div>
 </form>
