Revert "Merge branch 'master' into ltkriger"
This reverts commit b7538f02ed5cf57a323bb8860dbdd303bc88c385, reversing
changes made to e9d75015efe991aeae9f6d1ca9c4598b1acb14e9.

--- a/app-web/static/css/style.css
+++ b/app-web/static/css/style.css
@@ -78,56 +78,20 @@
 	justify-content: space-between;
 }
 
-.boton-container-reserva {
+.boton-reserva {
     min-width: 100%;
     display: flex;
-	align-items: flex-start;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
-.boton-container-reserva::before {
-	display: none !important;
-}
-
-.boton-container-reserva .button {
+.boton-reserva .button {
 	width: fit-content;
-	margin-top: 0;
-}
-
-.container-error-message {
-	height: 100%;
-	width: 50%;
-}
-
-.container-error-message .text-error-message {
-	text-wrap: balance;
-    color: #d9534f;
-	font-size: 16px;
-	line-height: 20px;
-	transition: .3s;
 }
 
 .thumbnail-classic .caption-title span {
 	display: block;
 	font-size: 18px;
 }
-
-.form-reserva {
-    flex-direction: column !important;
-    align-items: center !important;
-    width: 100%;
-}
-
-.form-reserva .cell-form {
-	width: 100% !important;
-}
-
-.label-form-reserva {
-	margin-bottom: 5px;
-	color: #363d41;
-}
-
-
 
 /* -------------------- END PROPIOS --------------------  */
 
