Unificacion front-back

--- a/app-web/templates/info_reserva.html
+++ b/app-web/templates/info_reserva.html
@@ -1,5 +1,5 @@
 <form class="rd-mailform form-info-reserva" method="post">
-  <input type="hidden" name="id_reserva" value="{{reserva.id_reserva}}" />
+  <input type="hidden" name="numero_reserva" value="{{reserva.numero_reserva}}" />
   <div class="range range-sm-bottom spacing-20">
     <div class="cell-sm-6 cell-form">
       <p class="label-form-reserva">Nombre</p>
@@ -28,7 +28,7 @@
     <div class="cell-xl-12 cell-md-12 cell-sm-12 cell-form">
       <p class="label-form-reserva">Hotel</p>
       <div class="form-wrap">
-        <p class="form-input">{{reserva.hotel_nombre}}</p>
+        <p class="form-input">{{reserva.nombre_hotel}}</p>
       </div>
     </div>
     <hr class="divider divider-left divider-custom" />
