--- a/app-web/templates/info_reserva.html
+++ b/app-web/templates/info_reserva.html
@@ -28,7 +28,7 @@
     <div class="cell-xl-12 cell-md-12 cell-sm-12 cell-form">
       <p class="label-form-reserva">Hotel</p>
       <div class="form-wrap">
-        <p class="form-input">{{reserva.hotel_nombre}}</p>
+        <p class="form-input">{{reserva.nombre_hotel}}</p>
       </div>
     </div>
     <hr class="divider divider-left divider-custom" />
