--- a/app-web/templates/disponibilidad.html
+++ b/app-web/templates/disponibilidad.html
@@ -14,12 +14,9 @@
                       <input class="form-input" id="reserve_hotel" type="text" name="hotel" data-constraints="@Required" readonly role="button" style="display: none;" />
                       <select id="hotel-options" onchange="updateHotelName()">
                         <option value="">Selecciona un hotel...</option>
-                        <option value="Lagos Andinos">Lagos Andinos</option>
-                        <option value="Mar del Plata">Mar del Plata</option>
-                        <option value="Cerro Siete Colores">Cerro Siete Colores</option>
-                        <option value="Selva Misionera">Selva Misionera</option>
-                        <option value="Valle de la Luna">Valle de la Luna</option>
-                        <option value="Cerro Fitz Roy">Cerro Fitz Roy</option>
+                        {% for hotel in hoteles %}
+                          <option value="{{ hotel['id_hotel'] }}">{{ hotel['nombre'] }}</option>
+                        {% endfor %}
                       </select>
                     </div>
                   </div>
