--- a/app-web/templates/disponibilidad.html
+++ b/app-web/templates/disponibilidad.html
@@ -4,7 +4,7 @@
 {%block content%}
         <div id="reserva-vista">
           <table class="section section-md bg-white text-center" id="reservas_hoteles">
-            <form class="rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="get" action="{{url_for('disponibilidad')}}">
+            <form class="rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post" action="{{url_for('disponibilidad')}}">
               <div class="range range-sm-bottom spacing-20">
                 <div>
                   <div class="cell-sm-6">
@@ -12,7 +12,7 @@
                       <p class="text-uppercase">Elegi el hotel</p>
                       <label for="reserve_hotel" id="contact-first-name"></label>
                       <input class="form-input" id="reserve_hotel" type="text" name="hotel" data-constraints="@Required" readonly role="button" style="display: none;" />
-                      <select id="hotel-options" onchange="updateHotelName()">
+                      <select id="hotel-options" name="id_hotel" onchange="updateHotelName()">
                         <option value="">Selecciona un hotel...</option>
                         {%for i in hoteles %}
                           <option value="{{ i['id_hotel'] }}">{{ i['nombre'] }}</option>
@@ -26,14 +26,14 @@
                   <p class="text-uppercase">Entrada</p>
                   <div class="form-wrap">
                     <label class="form-label form-label-icon" for="date-in-reserve"><span class="icon icon-primary fa-calendar "></span><span>Fecha de entrada</span></label>
-                    <input class="form-input" id="date-in-reserve" data-time-picker="date" type="text" name="date" data-constraints="@Required" role="button"/>
+                    <input class="form-input" id="date-in-reserve" data-time-picker="date" type="text" name="inicio_reserva" data-constraints="@Required" role="button"/>
                   </div>
                 </div>
                 <div class="cell-sm-6">
                   <p class="text-uppercase">Salida</p>
                   <div class="form-wrap">
                     <label class="form-label form-label-icon" for="date-out-reserve"><span class="icon icon-primary fa-calendar"></span><span>Fecha de salida</span></label>
-                    <input class="form-input" id="date-out-reserve" data-time-picker="date" type="text" name="date" data-constraints="@Required" role="button"/>
+                    <input class="form-input" id="date-out-reserve" data-time-picker="date" type="text" name="fin_reserva" data-constraints="@Required" role="button"/>
                   </div>
                 </div>
                 <div class="cell-sm-6 boton-reserva">
