--- a/app-web/static/css/style.css
+++ b/app-web/static/css/style.css
@@ -31826,3 +31826,16 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 		transform: translate(-100%, -60%);
 	}
 }
+
+.boton-servicios-contratados {
+	border-width: 1px;
+	border-radius: 15px;
+	color: #000;
+}
+
+.input-servicios-contratados {
+	text-align: center;
+	border: none;
+	color: black;
+	font-size: 16px;
+}
